[tool.poetry]
name = "test_task_atom"
version = "0.0.1"
description = ""
authors = ["demogi4523 <demogi4523@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.78.0"}
minio = "^7.1.8"
pytest = "^7.1.2"
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"
Pillow = "^9.1.1"
requests = "^2.27.1"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
